# esp32

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-APACHE  Makefile  README.md  build.rs  device.x  old.svd  periphtemplate.py
src/: .gitignore  apb_ctrl.rs  dport.rs  efuse.rs  generic.rs  gpio.rs  gpio_sd.rs  hinf.rs  i2c.rs  i2s.rs  ledc.rs  lib.rs  mcpwm.rs  pcnt.rs  rmt.rs  rtc_i2c.rs  rtccntl.rs  rtcio.rs  sens.rs  slc.rs  slchost.rs  spi.rs  syscon.rs  timg.rs  uart.rs  uhci.rs
src/apb_ctrl/: apb_ctrl_apb_saradc_ctrl2_reg.rs  apb_ctrl_apb_saradc_ctrl_reg.rs  apb_ctrl_apb_saradc_fsm_reg.rs  apb_ctrl_apb_saradc_sar1_patt_tab1_reg.rs  apb_ctrl_apb_saradc_sar1_patt_tab2_reg.rs  apb_ctrl_apb_saradc_sar1_patt_tab3_reg.rs  apb_ctrl_apb_saradc_sar1_patt_tab4_reg.rs  apb_ctrl_apb_saradc_sar2_patt_tab1_reg.rs  apb_ctrl_apb_saradc_sar2_patt_tab2_reg.rs  apb_ctrl_apb_saradc_sar2_patt_tab3_reg.rs  apb_ctrl_apb_saradc_sar2_patt_tab4_reg.rs  apb_ctrl_apll_tick_conf_reg.rs  apb_ctrl_ck8m_tick_conf_reg.rs  apb_ctrl_date_reg.rs  apb_ctrl_pll_tick_conf_reg.rs  apb_ctrl_sysclk_conf_reg.rs  apb_ctrl_xtal_tick_conf_reg.rs  apb_saradc_ctrl.rs  apb_saradc_ctrl2.rs  apb_saradc_fsm.rs  apb_saradc_sar1_patt_tab1.rs  apb_saradc_sar1_patt_tab2.rs  apb_saradc_sar1_patt_tab3.rs  apb_saradc_sar1_patt_tab4.rs  apb_saradc_sar2_patt_tab1.rs  apb_saradc_sar2_patt_tab2.rs  apb_saradc_sar2_patt_tab3.rs  apb_saradc_sar2_patt_tab4.rs  apll_tick_conf.rs  ck8m_tick_conf.rs  date.rs  pll_tick_conf.rs  sysclk_conf.rs  xtal_tick_conf.rs
src/dport/: access_check.rs  ahb_lite_mask.rs  ahb_mpu_table_0.rs  ahb_mpu_table_1.rs  ahblite_mpu_table_apb_ctrl.rs  ahblite_mpu_table_bb.rs  ahblite_mpu_table_bt.rs  ahblite_mpu_table_bt_buffer.rs  ahblite_mpu_table_btmac.rs  ahblite_mpu_table_can.rs  ahblite_mpu_table_efuse.rs  ahblite_mpu_table_emac.rs  ahblite_mpu_table_fe.rs  ahblite_mpu_table_fe2.rs  ahblite_mpu_table_gpio.rs  ahblite_mpu_table_hinf.rs  ahblite_mpu_table_i2c.rs  ahblite_mpu_table_i2c_ext0.rs  ahblite_mpu_table_i2c_ext1.rs  ahblite_mpu_table_i2s0.rs  ahblite_mpu_table_i2s1.rs  ahblite_mpu_table_io_mux.rs  (+712 more)
svd/: esp32.base.svd  esp32.svd
(+2821 files in other folders)
