[package]
name = "esp32"
version = "0.9.0"
authors = ["Scott Mabin <scott@mabez.dev>", "Arjan Mels <arjan@mels.email>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/esp-rs/esp32"
description = "Peripheral access crate for the ESP32"
keywords = ["no-std", "esp32", "wifi", "embedded"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
include = [
    "/src/**",
    "svd/esp32.svd",
    "build.rs",
    "device.x"
]
license = "MIT OR Apache-2.0"

[dependencies]
bare-metal = "0.2"
vcell = "0.1"
xtensa-lx = "0.3.0"
xtensa-lx-rt = { version = "0.5.0", optional = true }

[features]
default=[]
rt=["xtensa-lx-rt"]
